# hetzner-server-scouter

./: .gitignore  ReadMe.md  setup.cfg  setup.py
.github/workflows/: tests.yml
src/hetzner_server_scouter/: __main__.py  settings.py  utils.py
src/hetzner_server_scouter/db/: crud.py  db_conf.py  db_utils.py  models.py
src/hetzner_server_scouter/notifications/: crud.py  models.py  notify_telegram.py
src/hetzner_server_scouter/notify/: change_notifier.py  crud.py  models.py  notify_telegram.py
systemd/: hscout.service  hscout.timer
tests/: conftest.py  test_hetzner_api.py
tests/api/: test_hetzner_data_assertions.py
tests/db/: test_database.py
