[metadata]
name = hetzner_server_scouter
description = A tool for getting updates on certain hetzner servers at the server auction.
author = Emily Seebeck
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]

python_requires = >=3.10
zip_safe = no
package_dir =
    = src

# Each directory in the src dir should be listed here. For nested directories, separate the, with a `.`
packages =
    hetzner_server_scouter
    hetzner_server_scouter.db
    hetzner_server_scouter.notifications

# --- Packages ---

# TODO: You might want to update these dependencies
install_requires =
    coloredlogs~=15.0.1
    sqlalchemy[mypy]~=2.0.20
    sqlalchemy-utils~=0.41
    types-sqlalchemy-utils~=1.0.1
    requests~=2.31.0
    types-requests~=2.31.0
    python-telegram-bot~=20.6


[options.extras_require]
testing =
    pytest~=7.4.0
    pytest-cov~=4.1.0
    pytest-asyncio~=0.21.1
    mypy~=1.5.1
    flake8~=6.1.0
    twine~=4.0.2
    build~=1.0.3
    radon~=6.0.1



# -/- Packages

[options.entry_points]
console_scripts =
    hscout = hetzner_server_scouter.__main__:main

# --- Do you want resources to be included in the distributed package?

# [options.package_data]
# TODO = resources/**

### -/-

# --- Linters ---

[flake8]
max-line-length = 500
ignore = E127

[mypy]
strict = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

implicit_optional = false
strict_optional = true

warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

show_error_context = true
show_column_numbers = true
pretty = true
color_output = true
